--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,106 @@
 @import './media.scss';
 
-h1 {
-    color: red;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
+body {
+    font-family: 'Segoe UI', Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    background: #fff;
+    color: #000;
+    line-height: 1.5;
+}
+
+a {
+    text-decoration: none;
+    color: #262626;
+}
+
+ul {
+    list-style: none;
+}
+
+.container {
+    width: 90%;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.main-nav {
+    display: flex;
+    align-items: center;
+    padding: 20px 0;
+    height: 60px;
+    font-size: 13px;
+    justify-content: space-between;
+
+    .logo {
+        width: 110px;
+    }
+
+    ul {
+        display: flex;
+
+        li {
+            padding: 0 10px;
+
+            a {
+                padding-bottom: 2px;
+
+                &:hover {
+                    border-bottom: 2px solid #262626;
+                }
+            }
+        }
+    }
+
+    .main-menu {
+        flex-grow: 1;
+        margin-left: 20px;
+    }
+}
+
+.btn {
+    cursor: pointer;
+    display: inline-block;
+    background-color: #262626;
+    color: #fff;
+    font-size: 15px;
+    border: 0;
+    font-weight: bold;
+    padding: 10px 20px;
+
+    &:hover {
+        opacity: 0.9;
+    }
+}
+
+.showcase {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    background: url('../img/header.png') no-repeat center center;
+    background-size: cover;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    padding-bottom: 50px;
+
+    h2 {
+        margin-bottom: 10px;
+    }
+
+    p {
+        margin-bottom: 10px;
+    }
+
+    .btn {
+        margin-top: 20px;
+    }
+}
+
