--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,7 @@ ul {
     margin: 0 auto;
 }
 
+/* Nav */
 .main-nav {
     display: flex;
     align-items: center;
@@ -78,6 +79,7 @@ ul {
     }
 }
 
+/* Showcase */
 .showcase {
     width: 100%;
     height: 400px;
@@ -101,6 +103,52 @@ ul {
 
     .btn {
         margin-top: 20px;
+    }
+}
+
+/* Home cards */
+.home-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin-bottom: 40px;
+
+    img {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    h3 {
+        margin-bottom: 5px;
+    }
+
+    a {
+        text-transform: uppercase;
+        display: inline-block;
+        padding-top: 10px;
+        font-weight: bold;
+        color: #0067b8;
+
+        &:hover i {
+            margin-left: 10px;
+        }
+    }
+}
+
+/* Xbox */
+.xbox {
+    width: 100%;
+    height: 350px;
+    background: url('../img/xbox.png') no-repeat center center;
+    background-size: cover;
+
+    .content {
+        width: 40%;
+        padding: 50px 0 0 30px;
+    }
+
+    p {
+        margin: 10px 0 20px;
     }
 }
 
