--- a/style.scss
+++ b/style.scss
@@ -188,3 +188,61 @@ ul {
     }
 }
 
+/* Links */
+.links {
+    background: #f2f2f2;
+    color: #616161;
+    padding: 35px 0;
+    font-size: 12px;
+
+    &-inner {
+        max-width: 1100px;
+        margin: 0 auto;
+        padding: 20px 0;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-gap: 10px;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    li {
+        line-height: 2.8;
+    }
+}
+
+/* Footer */
+.footer {
+    background: #f2f2f2;
+    color: #616161;
+    padding: 20px 0;
+    font-size: 12px;
+
+    &-inner {
+        max-width: 1100px;
+        margin: 0 auto;
+        padding: 0 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    li {
+        margin: 0 30px 20px 0;
+    }
+
+    div {
+        margin-bottom: 20px;
+        display: flex;
+        align-items: center;
+
+        i {
+            margin-right: 10px;
+        }
+    }
+}
