--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,3 @@
-@import './media.scss';
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -21,6 +19,19 @@ a {
 
 ul {
     list-style: none;
+}
+
+.menu-btn {
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    z-index: 2;
+    display: none;
+
+    &:hover {
+        opacity: 0.5;
+    }
 }
 
 .container {
@@ -246,3 +257,5 @@ ul {
         }
     }
 }
+
+@import './media.scss';
